[tool.poetry]
name = "rinohtype"
version = "0.4.3.dev"
description = "The Python document processor"
authors = ["Brecht Machiels <brecht@mos6581.org>"]
license = "AGPL-3.0-only"
packages = [
    { include = "rinoh", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.5"
docutils = "^0.16"
importlib-metadata = {version = ">=0.21", python = "<3.8"}
recommonmark = "^0.6.0"
rinoh-typeface-texgyrecursor = "^0.1.1"
rinoh-typeface-texgyreheros = "^0.1.1"
rinoh-typeface-texgyrepagella = "^0.1.1"
rinoh-typeface-dejavuserif = "^0.1.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"
restview = "^2.9.2"
tox = "^3.15.2"
twine = "^1.15.0"
pytest = "^6.1.1"
pytest-assume = "^2.3.3"
pytest-console-scripts = "^1.1.0"
tox-gh-actions = "^2.0.0"
wheel = "^0.35.1"
pytest-xdist = "^2.1.0"
