[tool.poetry]
name = "rinohtype"
version = "0.5.0"
description = "The Python document processor"
authors = ["Brecht Machiels <brecht@mos6581.org>"]
license = "AGPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/brechtm/rinohtype"
homepage = "https://github.com/brechtm/rinohtype"
keywords = ["typesetting", "rst", "pdf", "opentype"]
classifiers = [
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Printing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: XML"
]
packages = [
    { include = "rinoh", from = "src" }
]
include = [
    { path = ".coveragerc", format = "sdist" },
    { path = ".envrc", format = "sdist" },
    { path = ".python-version", format = "sdist" },
    { path = "CHANGES.rst", format = "sdist" },
    { path = "CONTRIBUTING.rst", format = "sdist" },
    { path = "coverage.py", format = "sdist" },
    { path = "DEVELOPING.rst", format = "sdist" },
    { path = "doc", format = "sdist" },
    { path = "gitlabpypi.py", format = "sdist" },
    { path = "icons", format = "sdist" },
    { path = "macapp", format = "sdist" },
    { path = "macapp.py", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
    { path = "poetry.toml", format = "sdist" },
    { path = "pyenv_setup.py", format = "sdist" },
    { path = "run_tests.py", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "tests_regression", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
    { path = "wininst.py", format = "sdist" },
    { path = "wininst.cfg", format = "sdist" },
]

[tool.poetry.scripts]
rinoh = "rinoh.__main__:main"

[tool.poetry.plugins."rinoh.frontends"]
CommonMark = "rinoh.frontend.commonmark:CommonMarkReader"
reStructuredText = "rinoh.frontend.rst:ReStructuredTextReader"

[tool.poetry.plugins."rinoh.templates"]
article = "rinoh.templates:Article"
book = "rinoh.templates:Book"

[tool.poetry.plugins."rinoh.stylesheets"]
sphinx = "rinoh.stylesheets:sphinx"
sphinx_article = "rinoh.stylesheets:sphinx_article"
sphinx_base14 = "rinoh.stylesheets:sphinx_base14"

[tool.poetry.plugins."rinoh.typefaces"]
courier = "rinoh.fonts.adobe14:courier"
helvetica = "rinoh.fonts.adobe14:helvetica"
symbol = "rinoh.fonts.adobe14:symbol"
times = "rinoh.fonts.adobe14:times"
"itc zapfdingbats" = "rinoh.fonts.adobe14:zapfdingbats"

[tool.poetry.plugins."sphinx.builders"]
rinoh = "rinoh.frontend.sphinx"

[tool.poetry.dependencies]
python = "^3.6.1"
appdirs = "^1.4.3"
docutils = ">=0.15"
importlib-metadata = {version = ">=0.21", python = "<3.8"}
recommonmark = ">=0.6.0"
rinoh-typeface-dejavuserif = "^0.1.3"
rinoh-typeface-texgyrecursor = "^0.1.1"
rinoh-typeface-texgyreheros = "^0.1.1"
rinoh-typeface-texgyrepagella = "^0.1.1"
Sphinx = { version = ">=2.2.1", optional = true }

[tool.poetry.dev-dependencies]
doc8 = "^0.8.1"
pytest = "^6.2.2"
pytest-assume = "^2.4.2"
pytest-console-scripts = "^1.0.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.1.0"
restview = "^2.9.2"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-autoprogram = "^0.1.5"
tox = "^3.21.3"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.2"}
pytest-github-actions-annotate-failures = { version = "^0.1.1", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
